--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   "private": true,
   "dependencies": {
     "document-register-element": "1.13.1",
+    "express": "4.17.1",
+    "nano": "^8.1.0",
     "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "express": "4.17.1"
+    "react-dom": "16.12.0"
   },
   "devDependencies": {
     "@nrwl/workspace": "9.0.1",
