--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "private": true,
   "dependencies": {
+    "@types/react-beautiful-dnd": "^12.1.1",
     "body-parser": "^1.19.0",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
