Added update functionality

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@types/react-beautiful-dnd": "^12.1.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
     "nano": "^8.1.0",
