--- a/apps/todo-e2e/tsconfig.json
+++ b/apps/todo-e2e/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "types": ["cypress", "node"]
+    "types": ["cypress", "node", "dom"]
   },
   "include": ["**/*.ts", "**/*.js"]
 }
